--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "php": ">=5.4",
         "symfony/http-foundation": "^2.7",
+        "symfony/yaml": "^2.7",
         "twig/twig": "^1.22",
         "mailchimp/mailchimp": "^2.0"
     },
